<resources>
    <string name="app_name">Cel-Fer</string>
    <string name="intro">Hello, you can use this application to check\n your skills on temperature conversion, or\n calculate the correct value</string>
    <string name="RBcalc">Calculate</string>
    <string name="RBcheck">Check</string>
    <string name="Bgo">Go!</string>
    <string name="TVfarenheit">Farenheit</string>
    <string name="TVcelcius">Celcius</string>
    <string name="Breturn">Return</string>
    <string name="closing">Closing the app</string>
    <string name="sure">Are you sure?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="host">Hosting activity must imlements the interface ResultListerner</string>
    <string name="precision">Set the number percision</string>
    <string name="cancel">Cancel</string>
    <string name="Ok">Ok</string>
    <string name="none">none</string>
    <string name="Full">full</string>
</resources>
