<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.ex8.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:id="@+id/introText"/>

    <ImageView
        android:layout_width="70dp"
        android:layout_height="150dp"
        android:background="@drawable/pict"
        android:layout_alignParentEnd="true"
        android:id="@+id/imageView" />

    <RadioGroup
        android:layout_below="@+id/introText"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RG">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RBcalc"
            android:id="@+id/RBcalculate"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RBcheck"
            android:id="@+id/RBcheck"/>

    </RadioGroup>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_below="@+id/RG"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LLbuttonEt">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.example.user.ex8.MyEditText
                android:freezesText="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="5"
                android:id="@+id/ETFeranheit"
                android:layout_weight="1"
                android:enabled="false"/>
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TVfarenheit"
                android:id="@+id/TVfarenheit"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Bgo"
            android:id="@+id/Bgo"
            android:enabled="false"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.example.user.ex8.MyEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="5"
                android:freezesText="true"
                android:id="@+id/ETcelcius"
                android:layout_weight="1"
                android:enabled="false"/>
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TVcelcius"
                android:id="@+id/TVcelcius"/>
        </LinearLayout>

    </LinearLayout>




</RelativeLayout>
